        we do not recommend using patchless RHEL4 clients with kernels
        prior to 2.6.9-55EL (RHEL4U5).
       * Recommended e2fsprogs version: 1.40.7-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : enhancement
Bugzilla   : 15416
Description: Update kernel to SLES9 2.6.5-7.311.

Severity   : enhancement
Bugzilla   : 15240
Description: Update kernel to RHEL4 2.6.9-67.0.7.

Severity   : minor
Bugzilla   : 14856
Frequency  : on ppc only
Description: not convert ost objects for directory because it's not exist.
Details    : ll_dir_getstripe assume dirrectory has ost objects but this wrong.

Severity   : minor
Bugzilla   : 15517
Description: Fix warnings with compile liblustre at sles10/rhel5 which have
             __u64 as usingied long long type.

Severity   : minor
Bugzilla   : 15210
Frequency  : rare, on shutdown
Description: race process ast vs remove callback
Details    : removing callback before disconnect import open race with processing
             callback.

Severity   : enhancement
Bugzilla   : 15416
Description: Update kernel to SLES9 2.6.5-7.311.

Severity   : normal
Bugzilla   : 12652
Description: Add FMODE_EXEC to SLES10 SP1 series.

Severity   : enhancement
Bugzilla   : 13397
Description: Add server support for vanilla-2.6.22.14.

Severity   : normal
Bugzilla   : 13375
Descriptoin: make lov_create() will not stuck in obd_statfs_rqset()
Details    : If an OST is down the MDS will hang indefinitely in
             obd_statfs_rqset() waiting for the statfs data. While for
             MDS QOS usage of statfs, it should not stuck in waiting.

Severity   : normal
Bugzilla   : 3055
Description: Disable adaptive timeouts by default

Severity   : major
Bugzilla   : 15027
Frequency  : on network error
Description: panic with double free request if network error 